--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -29,6 +29,7 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{placeins}
+\usepackage{subfigure}
 %\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
 \usetikzlibrary{calc,intersections,through,backgrounds,graphs,positioning,shapes,arrows}
 \usetikzlibrary{patterns,decorations.pathreplacing}
@@ -53,7 +54,6 @@
   numberstyle=\ttfamily\tiny
 }
 \usepackage{caption}
-\usepackage{subcaption}
 \usepackage{standalone}
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{references.bib}
@@ -105,7 +105,6 @@ Philipp Solenthaler,
 Pascal Stump,
 Stefan Steiner,
 Dario Tr"utsch,\\
-Andreas Weilenmann,
 Thomas Ziegler
 \end{flushright}
 \vspace*{\stretch{2}}
@@ -187,6 +186,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input apfel/apfelmaennchenInput.tex
 \input mapreduce/mapreduce.tex
 \input heat/heat.tex
+\input potential/potential.tex
 \vfill
 \pagebreak
 \lhead{Index}
