reformat title page

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -104,7 +104,7 @@ Christian Schmid,
 Philipp Solenthaler,
 Pascal Stump,
 Stefan Steiner,
-Dario Tr"utsch,\\
+Dario Tr"utsch,
 Thomas Ziegler
 \end{flushright}
 \vspace*{\stretch{2}}
