add green function article

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -61,6 +61,7 @@
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
 \addbibresource{mapreduce/map.bib}
+\addbibresource{green/quellen.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
 \begin{document}
@@ -187,6 +188,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input mapreduce/mapreduce.tex
 \input heat/heat.tex
 \input potential/potential.tex
+\input green/green.tex
 \vfill
 \pagebreak
 \lhead{Index}
