--- a/skript/daten.tex
+++ b/skript/daten.tex
@@ -159,7 +159,7 @@ wovon im folgenden drei kurz besprochen werden sollen.
 \index{NetCDF}
 Wikipedia beschreibt NetCDF wie folgt:
 \begin{quote}
-Network Common Data Format (NetCDF) ist ein Dateiformat für den
+Network Common Data Format (NetCDF) ist ein Dateiformat f"ur den
 Austausch wissenschaftlicher Daten. Es handelt sich um ein bin"ares
 Dateiformat, das durch die Angabe der Byte-Reihenfolge im Header
 maschinenunabh"angig ist. NetCDF ist ein offener Standard; das Projekt
