--- a/skript/green/quellen.bib
+++ b/skript/green/quellen.bib
@@ -1,41 +1,41 @@
-@online{greenMatheSociety,
-  author        = "D. M. Cannell and N. J. Lord",
-  title         = "George Green, Mathematician and Physicist 1793-1841",
-  url           = "http://www.math.washington.edu/~morrow/334\_13/green.pdf",
-  year          = "2013",
-  urldate	    = "2014-05-13"
+@misc{ greenMatheSociety,
+  author        = {D. M. Cannell and N. J. Lord},
+  title         = {George Green, Mathematician and Physicist 1793-1841},
+  url           = {http://www.math.washington.edu/~morrow/334\_13/green.pdf},
+  year          = 2013},
+  urldate	= {2014-05-13}
 }
 
-@online{wiki:green ,
-  author        = "Wikipedia",
-  title         = "George Green",
-  url           = "http://en.wikipedia.org/wiki/George_Green",
-  year          = "2014",
-  urldate	    = "2014-05-14"
+@misc{ wiki:green,
+  author        = {Wikipedia},
+  title         = {George Green},
+  url           = {http://en.wikipedia.org/wiki/George_Green},
+  year          = 2014,
+  urldate	= {2014-05-14}
 }
 
-@online{wiki:westminster ,
-  author        = "Wikipedia",
-  title         = "Westminster Abbey",
-  url           = "http://en.wikipedia.org/wiki/Westminster_abbey",
-  year          = "2014",
-  urldate	    = "2014-05-19"
+@misc{ wiki:westminster,
+  author        = {Wikipedia},
+  title         = {Westminster Abbey},
+  url           = {http://en.wikipedia.org/wiki/Westminster_abbey},
+  year          = 2014,
+  urldate	= {2014-05-19}
 }
 
-@online{nasa:fits ,
-  author        = "NASA",
-  title         = "The FITS Support Office",
-  url           = "http://fits.gsfc.nasa.gov",
-  year          = "2013",
-  urldate	    = "2014-05-19"
+@misc{ nasa:fits,
+  author        = {NASA},
+  title         = {The FITS Support Office},
+  url           = {http://fits.gsfc.nasa.gov},
+  year          = 2013,
+  urldate	= {2014-05-19}
 }
 
-@MISC{mueller:hpcseminar,
-  AUTHOR       = "Müller, Andreas",
-  TITLE        = "HPC Seminar",
-  YEAR         = "2014",
-  NOTE         = "Available online at
+@misc{ mueller:hpcseminar,
+  AUTHOR       = {M"uller, Andreas},
+  TITLE        = {HPC Seminar},
+  YEAR         = 2014,
+  NOTE         = {Available online at
                   \url{https://github.com/AndreasFMueller/SeminarHPC};
-                  visited on May 20th 2014."
+                  visited on May 20th 2014.}
 }
 
