--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -30,6 +30,7 @@
 \usepackage{tikz}
 \usepackage{placeins}
 \usepackage{subfigure}
+\usepackage{csquotes}
 %\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
 \usetikzlibrary{calc,intersections,through,backgrounds,graphs,positioning,shapes,arrows}
 \usetikzlibrary{patterns,decorations.pathreplacing}
