--- a/skript/green/green.tex
+++ b/skript/green/green.tex
@@ -7,7 +7,7 @@
 
 Um ein Problem der Mathematik besser zu verstehen, ist es oft sehr
 hilfreich, wenn es verst"andlich beschrieben ist. Eine Visualisierung
-in Form eines Bildes oder kurzen Films ist dabei eine M"oglichkeit
+in Form eines Bildes oder kurzen Films ist dabei eine M"oglichkeit,
 dies zu bewerkstelligen.
 	
 Ziel dieses Projektes war, die Greensche Funktion in zwei Dimensionen
@@ -40,11 +40,11 @@ wurde, gibt es kein Bild von ihm. Darum wird anstatt seinem Konterfei
 jeweils eine Windm"uhle verwendet um ihn darzustellen. Die Windm"uhle
 gibt es "ubrigens immer noch. Green ver"offentliche mit etwa dreissig
 Jahren seine erste Arbeit. Diese wurde kaum beachtet, ausser von
-einem adligen Mathematik namens Sir Edward Bromhead. Er ermutigte
-Green, im Alter von vierzig Jahren in Cambridge zu studieren.
+einem adligen Mathematiker namens Sir Edward Bromhead. Er ermutigte
+Green, im Alter von vierzig Jahren, in Cambridge zu studieren.
 Interessant zu wissen ist dazu, dass dort zu dieser Zeit die Theorien
 von Laplace und Fourier noch nicht gelehrt wurden. Green hatte sich
-jedoch durch diese Theorie gelesen und sogar noch einige Erweiterungen
+jedoch durch diese Theorien gelesen und sogar noch einige Erweiterungen
 hinzugef"ugt. Vier Jahre nachdem er graduierte und kurz vor seinem
 internationalen Durchbruch stand, starb er 1841 jedoch an einer
 schweren Grippe. Dadurch geriet seine Arbeit f"ur einige Zeit in
@@ -78,14 +78,14 @@ liefert uns ein Programm, bei welchem wir Daten einspeisen und im
 Gegenzug bearbeitet erhalten.
 	
 Das Problem, welches wir hier l"osen, wurde ebenfalls von Philip
-Solenthaler und Reto Christen bearbeitet. Sie haben untersucht wie
+Solenthaler und Reto Christen bearbeitet. Sie haben untersucht, wie
 ein Programm geschrieben werden kann, welches dieses Problem
 m"oglichst effizient l"ost.
 
 \subsection{Mathematischer Ansatz zur L"osung}
 
 Das Potentialproblem auf der leitenden Platte, welches wir l"osen
-m"ochten, hat nun folgende partielle Differentialgleichung.
+m"ochten, hat nun folgende partielle Differentialgleichung:
 \begin{equation}\label{eq:gleichung}
 \dfrac{\partial^2 u}{\partial x^2}+\dfrac{\partial^2 u}{\partial y^2} = f(x,y).
 \end{equation}
@@ -165,7 +165,7 @@ u_{ij} = \dfrac{u_{i-i,j}+u_{i+1,j}+u_{i,j+1}+u_{i,j-1}-f_{ij}}{4}
 \end{eqnarray}
 	
 Da die diskretisierte partielle Ableitung jeweils nur die Elemente
-ober/unterhalb und links/recht des aktuellen Elementes in die
+ober/unterhalb und links/rechts des aktuellen Elementes in die
 Rechnung mit einbezieht (\ref{eq:gauss-seidel}), m"ussen mindestens
 $n$ Iterationen durchgef"uhrt werden, damit sich das Potential "uber
 die ganze Ebene verteilt.
@@ -180,7 +180,7 @@ Das ist zwar nicht so effizient, wie ein "'normaler"' Gauss-Seidel,
 wird aber durch die Parallelisierung schneller.
 		
 Die Abweichung ist bei den ersten Schritten am gr"ossten, und wird
-bei jeder Iteration kleiner. Als wie die ersten Berechnungen durch
+bei jeder Iteration kleiner. Als wir die ersten Berechnungen durch
 gef"uhrt hatten, fiel uns auf, dass die einzelnen Threads am Anfang
 gut als Linien von Spitzen sichtbar sind (\ref{fig:201_1}).
 		
@@ -198,7 +198,7 @@ Methode war, die Berechnung zu parallelisieren. Wie bei der Arbeit
 von Christen und Solenthaler erkl"art, w"are Open-MPI die effizienteste
 Weise, um solch ein Problem zu l"osen. Da hier nur die Resultate
 des Algorithmus von Interesse waren und wir relativ kleine Probleme
-gel"ost haben, hat es sich nicht gelohnt den Mehraufwand f"ur
+gel"ost haben, hat es sich nicht gelohnt, den Mehraufwand f"ur
 Open-MPI zu betreiben. Die Rechenzeit war absolut im Rahmen.
 		
 Wie schon beim Kugelsternhaufen erw"ahnt, ist nun diese Open-MP
@@ -217,7 +217,7 @@ zeigt.
 	
 Um mit der Datenflut umgehen zu k"onnen, musste ebenfalls eine
 L"osung entwickelt werden. Als Eingabedatei wurde ein Bild im FITS
-Format verwendet. Da es jedoch einfacher schien wurde w"ahrend des
+Format verwendet. Da es jedoch einfacher schien, wurde w"ahrend des
 Programmes mit \texttt{.csv} Files gearbeitet. Dabei war der
 technische Aufwand gering und die Resultate konnten schnell
 kontrolliert werden. Aus diesen \texttt{.csv} Dateien kann mit GNU-Plot ein
@@ -236,18 +236,16 @@ sie in unserer Arbeit definiert haben.
 		
 W"urden wir jeweils die L"osungen f"ur alle Werte $u_{ij}$ einzeln
 berechnen und sie dann addieren, m"ussten wir diese Schritte
-schlussendlich noch Visuell darstellen. Der Aufwand hierf"ur ist
-aber betr"achtlich.
-
-Da die Darstellung im Vordergrund steht, ist das Verfahren zur
+schlussendlich noch visuell darstellen. Der Aufwand hierf"ur ist
+aber betr"achtlich. Da die Darstellung im Vordergrund steht, ist das Verfahren zur
 Berechnung irrelevant f"ur das Endergebnis. Um die Rechnung zu
 beschleunigen, haben wir uns f"ur einen anderen Algorithmus
-entschieden, welcher uns erlaubt so viele Werte $u_{ij}$ wie n"otig
+entschieden, welcher uns erlaubt, so viele Werte $u_{ij}$ wie n"otig
 miteinander zu l"osen.
 		
 Wir werden dementsprechend immer das gleiche Problem l"osen mit
 jeweils zus"atzlichen Werten $u$. Jeder dieser Schritte hat ein
-Bild mit den vorherigen plus den neuen Werten zu folge. Zusammengestellt
+Bild mit den vorherigen plus den neuen Werten zur Folge. Zusammengestellt
 ergeben diese Bilder eine anschauliche Visualisierung der Greenschen
 Funktion.
 	
@@ -257,7 +255,7 @@ Funktion.
 Welche Werte wir jeweils in einem Schritt dazu nehmen ist noch
 offen. Man k"onnte beispielsweise die Fl"ache von oben links bis
 unten rechts durchgehen und immer ein oder mehrere Punkte dazu
-nehmen. Es ist auch vorstellbar diese Punkte zuf"allig auszuw"ahlen,
+nehmen. Es ist auch vorstellbar, diese Punkte zuf"allig auszuw"ahlen,
 bis alle Punkte berechnet wurden. Der Nachteil dieser Verfahren
 ist, dass sie nicht viel weniger aufw"andig sind, als das Verfahren,
 welches alle Punkte einzeln berechnet. Wenn beispielsweise eine
@@ -267,8 +265,8 @@ auch 250\,000 Bilder vorhanden, eine Datenflut, die unser Auge wohl
 kaum bew"altigen kann. Es ist fraglich, wie sinnvoll eine solche
 Visualisierung ist.
 		
-Um das zu verhindern, haben wir uns entschieden in der Mitte einer
-solchen Fl"ache zu beginnen und dann Schrittweise, Ring f"ur Ring,
+Um das zu verhindern, haben wir uns entschieden, in der Mitte einer
+solchen Fl"ache zu beginnen und dann schrittweise, Ring f"ur Ring,
 nach aussen zugehen.
 
 \begin{figure}
@@ -285,7 +283,7 @@ $500 \times 500$ Werte dargestellt wird.}
 	
 In jedem dieser drei Schritte werden nur die roten Punkte in die
 Berechnung ber"ucksichtigt, die anderen werden gleich Null gesetzt.
-Jeder Schritt wir vollst"andig gel"osst, bis der maximale Fehler
+Jeder Schritt wird vollst"andig gel"ost, bis der maximale Fehler
 eine Grenze unterschreitet.
 	
 \subsection{Technische Umsetzung}
@@ -315,7 +313,7 @@ auch mit GUI erh"altlich ist.
 	
 \subsection{Generieren der Bilder}
 	
-Die Bilder werden nachdem alle Einzelschritte berechnet wurden, aus
+Die Bilder werden, nachdem alle Einzelschritte berechnet wurden, aus
 den Dateien wiederum parallelisiert in einer \verb|for|-Schleife
 zu \texttt{.png} Bilddateien verarbeitet. Da der letzte Schritt das Maximum
 bzw. Minimum aller Schritte enth"alt, sofern wir nur Potentiale mit
@@ -379,8 +377,8 @@ kleiner und wir bekamen brauchbare Werte.
 	
 Bei Platten mit feiner Diskreditierung mussten wir darauf achten,
 dass wir nicht zu viele Daten abspeichern. Wir mussten das Programm
-so umschreiben, dass wir einstellen konnten wie viele Bilder wir
-schlussendlich wollten. Anhand von diesem Einstellungen wurde nur
+so umschreiben, dass wir einstellen konnten, wie viele Bilder wir
+schlussendlich wollten. Anhand dieser Einstellung wurden nur
 die ben"otigten \texttt{.csv} und \texttt{.png} Dateien abgespeichert.
 Das Programm wurde dadurch automatisch auch gleich viel schneller.
 		
@@ -388,22 +386,21 @@ Das Programm wurde dadurch automatisch auch gleich viel schneller.
 Wir wollen eine Platte mit  $40 \times 40$ Werten berechnen. Um die
 Konvergenz beobachten zu k"onnen, speichern wir nach jeder Iteration
 die Werte in eine \texttt{.csv} Datei ab. Es sind etwa 3000 bis 4000 Iterationen
-n"otig bis sich die Werte nicht mehr ver"andern. Das ist alles ohne
-Problem m"oglich.
+n"otig bis sich die Werte nicht mehr ver"andern. Das ist problemlos m"oglich.
 			
 Wir wollen mehr, eine Platte mit $500 \times 500$ Werten. Um hier
 eine Konvergenz zu beobachten, sind etwa 160\,000 bis 180\,000
 Iterationen n"otig, wie wir sp"ater herausgefunden haben. Das Ganze
 ist nat"urlich stark vom Ausgangsbild abh"angig.
 
-Eine .csv Datei ist dann etwa 1.8\,MB gross, d.~h.~wir wollen ca.~300\,GB
-abspeichern. Dies ist m"oglich sofern gen"ugen Platz vorhanden
+Eine \texttt{.csv} Datei ist dann etwa 1.8\,MB gross, d.~h.~wir wollen ca.~300\,GB
+abspeichern. Dies ist m"oglich, sofern gen"ugen Platz vorhanden
 ist. Das eigentliche  Problem ist aber, dass das Programm nur noch
 mit Daten speichern besch"aftigt ist und kaum noch Zeit zum Rechnen
 hat.
 \end{beispiel}
 	
-\subsection{geeigneter Vektor $f$ finden}\label{sec:geeignetesF}
+\subsection{Geeigneter Vektor $f$ finden}\label{sec:geeignetesF}
 
 Ein ganz anderes Problem war, ein geeignetes Bild f"ur die Platte zu finden.
 Es sollte die "Uberlagerung der Werte gut zeigen. Wir versuchten
