Integration des Radon-Artikels

--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -70,9 +70,10 @@ Damit schliesst sich der Kreis der Awendungen. Lewis Fry Richardson hat
 sich vor ziemlich genau hundert Jahren eine Methode zur Berechnung der
 Wetterentwicklung ausgedacht. Zu deren Durchf"uhrung stellte er sich
 eine {\em Forecast Fatory} vor (Abbildung~\ref{forecastfactory}),
-ein riesiges, Theaterartiges Geb"aude,
-wo viele Computer, als Arbeiter mit Rechenmaschinen an der
-Berechnung der Atmosph"arenentwicklung f"ur jeweils ein Teilgebiet arbeiten,
+ein riesiges, theaterartiges Geb"aude,
+wo viele Computer, also Arbeiter mit mechanischen Rechenmaschinen an der
+Berechnung der Atmosph"arenentwicklung f"ur jeweils ein Teilgebiet
+der Erdoberfl"ache arbeiten,
 und ihre Resultate an ihre Nachbar-Rechner weitergeben. 
 Man kann also durchaus sagen, dass Richardson der erste war, der die Vision
 eines massiv parallelen Rechners zur L"osung eines HPC Problems hatte,
