--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -59,6 +59,7 @@
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{references.bib}
 \addbibresource{sample/sample.bib}
+\addbibresource{radon/RadonBack.bib}
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
 \addbibresource{mapreduce/map.bib}
@@ -183,7 +184,8 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \lhead{Anwendungen}
 \def\chapterauthor#1{{\large #1}\bigskip\bigskip}
 \input anwendungen.tex
-\input sample/sample.tex
+%\input sample/sample.tex
+\input radon/RadonBack.tex
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
 \input mapreduce/mapreduce.tex
