Artikel Stosswellen integriert

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -64,6 +64,7 @@
 \addbibresource{apfel/apfelmaennchen.bib}
 \addbibresource{mapreduce/map.bib}
 \addbibresource{green/quellen.bib}
+\addbibresource{stosswellen/stoss.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
 \begin{document}
@@ -192,6 +193,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input heat/heat.tex
 \input potential/potential.tex
 \input green/green.tex
+\input stosswellen/stosswellen.tex
 \vfill
 \pagebreak
 \lhead{Index}
