--- a/skript/einleitung.tex
+++ b/skript/einleitung.tex
@@ -3,7 +3,7 @@
 Das Mooresche Gesetz hat in den letzten vierzig Jahren zu einem
 exponentiellen Wachstum der verf"ugbaren maschinellen Rechenleistung
 gef"uhrt und damit ein goldenes Zeitalter der Anwendung numerischer
-Modelle in allen Wissenschaftszweigen gef"uhrt.
+Modelle in allen Wissenschaftszweigen erm"oglicht.
 Ein eigenes Studienfach ``Computational Science'' ist geschaffen worden,
 um der gewachsenen Bedeutung von Computer-Simulationen Rechnung zu
 tragen. Und die Konsequenzen sind vielfach sp"urbar.
